--- a/app/views/personas/_registroconcepto_fields.html.erb
+++ b/app/views/personas/_registroconcepto_fields.html.erb
@@ -20,8 +20,7 @@ end
       <%end%>
       <% if desactivar==true and f.object.fecha_fin.nil? ==true
   %>
-      <%=link_to raw('<i class="fa fa-ban"></i>'), disablecp_persona_path(@persona)+"?cp=#{f.object.id}","data-method": "get", "data-confirm": "¿Está seguro que desea realizar esta acción? Una vez desactivado el concepto, no podrá ser habilidato nuevamente?
-      *Este concepto aplicará hasta la quincena pasada." %>
+      <%=link_to raw('<i class="fa fa-ban"></i>'), disablecp_persona_path(@persona)+"?cp=#{f.object.id}","data-method": "get", "data-confirm": "¿Está seguro que desea realizar esta acción? Una vez desactivado el concepto, no podrá ser habilidato nuevamente?\n   *Este concepto aplicará hasta la quincena pasada." %>
       <%end%>
     </div>
 
