--- a/app/views/conceptos/show.html.erb
+++ b/app/views/conceptos/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1><%= @concepto.nombre %></h1>
+    <h1><%= @concepto.nombre.upcase %></h1>
 </br>
 <h4>
     <b>Tipo de concepto:</b>
