--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,6 +1,9 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Contratar persona", path: new_persona_path ,x: Persona %>
+  <div class="pull-right boton">
 
+  </div>
+  <%= render 'layouts/nuevo', msg: "Requisitos", path: requisitos_path ,x: Requisito %>
   <h1><i class="fa fa-users"></i> Empleados</h1>
 </div>
 
