--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -13,6 +13,11 @@
       <li class="">
         <a href="#familiares" data-toggle="tab">Familia</a>
       </li>
+      <% if Requisito.all.length>0%>
+      <li class="">
+        <a href="#requisitos" data-toggle="tab">Requisitos</a>
+      </li>
+      <%end%>
       <% if Conceptopersonal.all.length>0%>
       <li class="">
         <a href="#conceptospersonales" data-toggle="tab">Conceptos Personales</a>
@@ -35,6 +40,10 @@
 
           <%= link_to_add_association raw('<i class="fa fa-plus"></i> Agregar Familiar'), f, :familiares, class: "links pull-right" %>
         </div>
+      </div>
+      <div class="tab-pane fade" id="requisitos">
+      
+          <%= render 'requisito',f: f  %>
       </div>
       <div class="tab-pane fade" id="conceptospersonales">
         <br>
