arreglo de registros detallitos de vistas

--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Nuevo Concepto", path: new_concepto_path  ,x: Concepto%>
 
-  <h1>Conceptos</h1>
+  <h1><i class="fa fa-money"></i> Conceptos</h1>
 </div>
 
   <%=render "concepto", x: 0,y: "Asignaciones", z: "success"%>
