--- a/app/views/conceptospersonales/_conceptopersonal.html.erb
+++ b/app/views/conceptospersonales/_conceptopersonal.html.erb
@@ -34,7 +34,7 @@
     </div>
     <%else%>
     <div class="actions">
-        <h4>"No hay asignaciones disponibles"</h4>
+        <h4>"No hay <%=y.downcase%>disponibles"</h4>
     </div>
     <%end%>
 </div>
