--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Nueva dependencia", path: new_dependencia_path ,x: Dependencia %>
 
-  <h1>Dependencias</h1>
+  <h1><i class="fa fa-building-o"></i> Dependencias</h1>
 </div>
 <ul class="list-group">
   <li class="list-group-item text-muted" contenteditable="false">Lista de dependencias</li>
