--- a/app/views/layouts/_acercade.html.erb
+++ b/app/views/layouts/_acercade.html.erb
@@ -24,10 +24,11 @@
                   <a href="#"><span class="fa fa-facebook"></span></a>
                   <a href="#"><span class="fa fa-globe"></span></a>
                 </dd>
-                <dd>Monica Huamani</dd>
-                <dt>Creditos <span class="fa fa-plug fa-fw"></span></dt>
-                <dd>eyrtyrt</dd>
-                <dd>Todo lo que haya que darle credito que no hayamos hecho</dd>
+                <dd>Monica Huamani <a href="#"><span class="fa fa-twitter"></span></a>
+                  <a href="#"><span class="fa fa-instagram"></span></a>
+                  <a href="#"><span class="fa fa-facebook"></span></a>
+                  <a href="#"><span class="fa fa-globe"></span></a>
+                </dd>
               </dl>
 </div>
 <div class="modal-footer">
