--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Lista de configuraciones</h1>
+    <h1><i class="fa fa-gears"></i> Lista de configuraciones</h1>
 </div>
 <ul class="list-group">
     <li class="list-group-item text-muted" contenteditable="false">Configuraciones</li>
