--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -139,7 +139,10 @@ Generar</button>
 </div>
 </div>
 </div>
-<h1>Tipos de Nómina</h1>
+<h1>  <span class="fa-stack  fa-fw," style="font-size: 0.7em;">
+    <i class="fa fa-user fa-stack-2x" style="color:black;"></i>
+    <i class="fa fa-money fa-stack-1x" style="color:white; margin-top:0.5em; margin-left:0.3em;"></i>
+  </span> Tipos de Nómina</h1>
 </div>
 
 <ul class="list-group">
