--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -2,7 +2,7 @@
 
   <%= render 'layouts/nuevo', msg: "Nuevo cargo", path: new_cargo_path ,x: Cargo%>
 
-  <h1>Cargos</h1>
+  <h1><i class="fa fa-briefcase"></i> Cargos</h1>
 </div>
 <ul class="list-group">
 
