--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
     <%= render 'layouts/nuevo', msg: "Nuevo Concepto Personal", path: new_conceptopersonal_path,x: Conceptopersonal %>
 
-    <h1>Conceptos Personales</h1>
+    <h1><i class="fa fa-money"></i> Conceptos Personales</h1>
 </div>
 
 <%=render "conceptopersonal", x: 0,y: "Asignaciones", z: "success"%>
