--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Nuevo Departamento", path: new_departamento_path ,x: Departamento %>
 
-  <h1>Departamentos</h1>
+  <h1><i class="fa fa-building-o"></i> Departamentos</h1>
 </div>
 <ul class="list-group">
   <li class="list-group-item text-muted" contenteditable="false">Lista de departamentos</li>
