--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Contratar persona", path: new_persona_path ,x: Persona %>
 
-  <h1>Empleados</h1>
+  <h1><i class="fa fa-users"></i> Empleados</h1>
 </div>
 
 <div class="row">
