--- a/app/views/welcome/users.html.erb
+++ b/app/views/welcome/users.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Usuarios</h1>
+    <h1><i class="fa fa-user-secret"></i> Usuarios</h1>
 </div>
 <ul class="list-group">
     <li class="list-group-item text-muted" contenteditable="false">Lista de usuarios</li>
